--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,13 +1,10 @@
+
 [package]
 name = "project-pulse-he"
 version = "1.0.0"
-description = "Project Pulse HE - Advanced Project Management System in Hebrew"
+description = "A Tauri App"
 authors = ["you"]
-license = ""
-repository = ""
-default-run = "project-pulse-he"
 edition = "2021"
-rust-version = "1.70"
 
 [build-dependencies]
 tauri-build = { version = "2.0", features = [] }
@@ -15,12 +12,11 @@ tauri-build = { version = "2.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0", features = [] }
-tauri-plugin-dialog = "2.3"
-tauri-plugin-fs = "2.3"
-tauri-plugin-shell = "2.3"
-tauri-plugin-opener = "2.3"
-tauri-plugin-notification = "2.3"
+tauri = { version = "2.0", features = ["shell-open"] }
+tauri-plugin-dialog = "2.0"
+tauri-plugin-fs = "2.0"
+tauri-plugin-shell = "2.0"
+tauri-plugin-opener = "2.0"
 
 [features]
 # by default Tauri runs in production mode
