--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,4 +1,3 @@
-
 [package]
 name = "project-pulse-he"
 version = "1.0.0"
@@ -12,11 +11,12 @@ tauri-build = { version = "2.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0", features = ["shell-open"] }
-tauri-plugin-dialog = "2.0"
-tauri-plugin-fs = "2.0"
-tauri-plugin-shell = "2.0"
-tauri-plugin-opener = "2.0"
+tauri = { version = "2.0", features = [] }
+tauri-plugin-dialog = "2.3"
+tauri-plugin-fs = "2.3"
+tauri-plugin-shell = "2.3"
+tauri-plugin-opener = "2.3"
+tauri-plugin-notification = "2.3"
 
 [features]
 # by default Tauri runs in production mode
