--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -6,22 +6,22 @@ authors = ["you"]
 edition = "2021"
 
 [build-dependencies]
-tauri-build = { version = "2.0", features = [] }
+tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0", features = [] }
-tauri-plugin-dialog = "2.3"
-tauri-plugin-fs = "2.3"
-tauri-plugin-shell = "2.3"
-tauri-plugin-opener = "2.3"
-tauri-plugin-notification = "2.3"
+tauri = { version = "1.5", features = [
+  "api-all",
+  "dialog-open",
+  "fs-all",
+  "shell-open",
+  "shell-execute",
+  "protocol-asset",
+  "window-all",
+  "macos-proxy"
+] }
 
 [features]
-# by default Tauri runs in production mode
-# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devUrl` is a "localhost" URL
 default = ["custom-protocol"]
-# this feature is used for production builds or when `devUrl` points to the filesystem
-# DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
