--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,106 +1,85 @@
-name: "Build and Release"
+name: "Build and Release - Tauri v1"
 on:
   push:
     branches: [ main ]
+    tags: [ 'v*' ]
   workflow_dispatch:
+
 jobs:
   build-macos:
     permissions:
       contents: write
-    runs-on: macos-14
+    runs-on: macos-12
     
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+        
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          bun-version: latest
+          node-version: 18
+          
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: aarch64-apple-darwin,x86_64-apple-darwin
+          
       - name: Rust cache
         uses: swatinem/rust-cache@v2
         with:
           workspaces: './src-tauri -> target'
+          
       - name: Install dependencies
-        run: bun install
-      # תיקון האייקונים השבורים
-      - name: Fix broken icons
+        run: npm install
+        
+      - name: Create basic icons (if missing)
         run: |
           mkdir -p src-tauri/icons
+          # Create a simple 1x1 PNG as fallback
           echo 'iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mNkYPhfDwAChwGA60e6kgAAAABJRU5ErkJggg==' | base64 -d > src-tauri/icons/32x32.png
           cp src-tauri/icons/32x32.png src-tauri/icons/128x128.png
           cp src-tauri/icons/32x32.png src-tauri/icons/128x128@2x.png
           cp src-tauri/icons/32x32.png src-tauri/icons/icon.png
           cp src-tauri/icons/32x32.png src-tauri/icons/icon.icns
           cp src-tauri/icons/32x32.png src-tauri/icons/icon.ico
-          echo "✅ Icons fixed"
-      # בדיקת תצורה לפני בנייה
-      - name: Debug configuration
+          echo "✅ Basic icons created"
+          
+      - name: Debug Tauri v1 configuration
         run: |
-          echo "=== package.json version ==="
-          cat package.json | grep '"version"'
-          echo "=== tauri.conf.json names ==="
-          cat src-tauri/tauri.conf.json | grep -E '"productName"|"mainBinaryName"|"version"'
-          echo "=== Cargo.toml name ==="
-          cat src-tauri/Cargo.toml | grep '^name'
-      # בנייה ושחרור
-      - name: Build and Release
+          echo "=== package.json Tauri version ==="
+          cat package.json | grep -A5 -B5 "@tauri-apps"
+          echo ""
+          echo "=== Cargo.toml version ==="
+          cat src-tauri/Cargo.toml | grep -A5 -B5 "tauri"
+          echo ""
+          echo "=== tauri.conf.json structure ==="
+          cat src-tauri/tauri.conf.json | head -20
+          
+      - name: Build and Release with Tauri v1
         uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tagName: "v__VERSION__"
-          releaseName: "Project Pulse HE v__VERSION__"
+          releaseName: "Project Pulse HE v__VERSION__ (Tauri v1)"
           releaseBody: |
-            🚀 **Project Pulse HE - Advanced Project Management System in Hebrew**
+            🎉 **Project Pulse HE - מנהל פרויקטים Pro**
             
-            ## ✨ Features:
-            - 📊 Advanced project and task management
-            - 📈 Real-time charts and analytics
-            - 🇮🇱 Full Hebrew and RTL support
-            - 💬 WhatsApp integration
-            - 🎨 Modern and intuitive user interface
+            ## ✨ גרסה חדשה עם Tauri v1:
+            - ✅ תיקון בעיות פתיחת תיקיות 
+            - ✅ תיקון בעיות WhatsApp integration
+            - ✅ שיפור יציבות במק ולינוקס
+            - ✅ ביצועים משופרים
             
-            ## 📥 Download:
-            - **macOS Universal**: `Project Pulse HE_1.0.0_universal.dmg`
+            ## 📥 הורדה:
+            - **macOS Universal**: `Project-Pulse-HE_1.0.0_universal.dmg`
             
-            ## 🛠️ Fixed Issues:
-            - ✅ Fixed broken icons
-            - ✅ Fixed binary naming (mainBinaryName)
-            - ✅ Proper artifact detection
-            - ✅ Complete build pipeline
+            ## 🔧 תיקונים:
+            - פתיחת תיקיות עובדת בכל המערכות
+            - קישורי WhatsApp פועלים בצורה מושלמת
+            - Gmail ומיילים עובדים ללא בעיות
+            - חיוג טלפון פועל כראוי
           releaseDraft: false
           prerelease: false
           args: --target universal-apple-darwin
-          artifactPaths: |
-            src-tauri/target/universal-apple-darwin/release/bundle/dmg/*.dmg
-            src-tauri/target/universal-apple-darwin/release/bundle/macos/*.app.tar.gz
-
-      # ← הוסף את השלב הזה כאן! ←
-      - name: Debug what actually exists
-        if: always()
-        run: |
-          echo "=== Checking entire target directory ==="
-          find src-tauri/target -type f 2>/dev/null | head -20
-          echo ""
-          echo "=== Checking specifically for bundle ==="
-          find src-tauri/target -name "*bundle*" -type d 2>/dev/null
-          echo ""
-          echo "=== Checking for any .dmg files ==="
-          find src-tauri/target -name "*.dmg" 2>/dev/null
-          echo ""
-          echo "=== Checking for any .app files ==="
-          find src-tauri/target -name "*.app" 2>/dev/null
-          echo ""
-          echo "=== Full directory structure ==="
-          ls -la src-tauri/target/universal-apple-darwin/release/ 2>/dev/null || echo "Directory doesn't exist"
-
-      # אימות סופי
-      - name: Verify build results
-        if: always()
-        run: |
-          echo "=== Final verification ==="
-          find src-tauri/target/universal-apple-darwin/release/bundle -name "*.dmg" -o -name "*.app*" 2>/dev/null || echo "❌ No bundle files"
