--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ jobs:
     permissions:
       contents: write
     runs-on: macos-12
+    timeout-minutes: 45
     
     steps:
       - name: Checkout repository
