--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
-    "@tauri-apps/api": "^1.5.3",
-    "@tauri-apps/cli": "^1.5.7",
+    "@tauri-apps/api": "1.5.3",
+    "@tauri-apps/cli": "1.5.7",
     "@types/react-window": "^1.8.8",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
