--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
 name: "Build and Release macOS"
+
 on:
   push:
-    tags:
-      - "v*"
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -20,7 +20,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: 'npm'
           
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
@@ -65,11 +64,6 @@ jobs:
             
             📥 הורדה למק:
             - 🍎 macOS Universal: מנהל-פרויקטים-Pro_v__VERSION___universal.dmg
-            
-            🔧 תיקונים בגרסה זו:
-            - תיקון פתיחת תיקיות במחשב
-            - תיקון פתיחת קישורי WhatsApp
-            - שיפור יציבות המערכת
           releaseDraft: false
           prerelease: false
           args: --target universal-apple-darwin
